# datachannel-unity

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  bootstrap.ps1  build-plugin.ps1  build-vs.ps1  cmake-vs.ps1  init-vcpkg.ps1  run-vcpkg.ps1  test.ps1  vcpkgs.txt
.github/workflows/: build.yml
scripts/: build-plugin.ps1  build-plugins.ps1  cmake-vs.ps1  install-vcpkgs.ps1  vcpkgs.txt
src/: CMakeLists.txt  build-vs.ps1  capi_plugin.cpp  capi_plugin_ex.cpp  data_channel_init_plugin.cpp  plugin.cpp
unity/DataChannel/: package.json
unity/DataChannel/Runtime/: Channel.cs  DataChannel.asmdef  DataChannel.cs  DataChannelInit.cs  DataChannelPackage.asmdef  DataChannelPlugin.cs  DataChannelPluginEx.cs  DataChannelPluginUtils.cs  PeerConnection.cs  Reliability.cs  Track.cs
unity/DataChannelExample/Assets/: CopyPasteOfferer.cs  DataChannel.cs  Manager.cs  PeerConnection.cs  Plugin.cs
unity/DataChannelExample/Assets/Scenes/: CopyPasteOfferer.unity  Manager.cs  SampleScene.unity
unity/DataChannelExample/ProjectSettings/: ProjectSettings.asset
unity/DataChannelUnity/: package.json
